# CI224-Game

./: Makefile  Makefile.in  config.h  config.status  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
include/vectormath/SSE/cpp/: vectormath_aos.h
shaders/: hello-gl.f.glsl  hello-gl.red.glsl  hello-gl.v.glsl
src/: BallisticInterpolator.cpp  BallisticInterpolator.h  BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  Cube.cpp  Cube.cpp~  Cube.h  Cube.h~  GameAsset.cpp  GameAsset.h  GameAsset.h~  GameObject.cpp  GameObject.h  IInterpolator.h  Main.cpp  Main.cpp~  Makefile  Makefile.am  Makefile.am~  Makefile.in  Md2Asset.cpp  Md2Asset.h  Player.cpp  Player.cpp~  Player.h  Player.h~  TriangularPyramidAsset.cpp  TriangularPyramidAsset.h  hello-gl.v.glsl  simplegame
src/.deps/: BallisticInterpolator.Po  BoundingBox.Po  Camera.Po  Cube.Po  GameAsset.Po  Main.Po  Md2Asset.Po  Player.Po  TriangularPyramidAsset.Po
